[gd_scene load_steps=17 format=3 uid="uid://kawls3n5yicf"]

[ext_resource type="Script" path="res://Scripts/GUI/WinScreen.gd" id="1_loboh"]
[ext_resource type="FontFile" uid="uid://cwdbww5rl1wbq" path="res://PirateSprite/Font/kenvector_future.ttf" id="1_yl7mk"]
[ext_resource type="FontFile" uid="uid://cn5odjput1dqk" path="res://PirateSprite/Font/Quicksand-Bold.ttf" id="2_nedba"]
[ext_resource type="Texture2D" uid="uid://d3614y35114kk" path="res://PirateSprite/Sprites/UI/Pack/blue_button00.png" id="3_bavyx"]
[ext_resource type="Texture2D" uid="uid://dyou0c1llidcd" path="res://PirateSprite/Sprites/UI/Pack/blue_button01.png" id="4_ar7sd"]
[ext_resource type="Texture2D" uid="uid://bakf58ndv48b8" path="res://PirateSprite/Sprites/UI/Pack/blue_button02.png" id="5_xwr70"]
[ext_resource type="LabelSettings" uid="uid://cf34xomloh8il" path="res://Settings/FontSettings/LabelSettings.tres" id="6_6pp12"]
[ext_resource type="AudioStream" uid="uid://beeykfs7tpu4w" path="res://PirateSprite/Sounds/SoundEffect/UI/click2.ogg" id="8_qhq6r"]
[ext_resource type="Texture2D" uid="uid://cqatbbd87vcx" path="res://PirateSprite/Sprites/UI/Pack/blue_button03.png" id="8_rw7s6"]
[ext_resource type="AudioStream" uid="uid://bubu0m1aydjjl" path="res://PirateSprite/Sounds/SoundEffect/UI/Success 1.wav" id="10_k3ty0"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_q8vha"]
bg_color = Color(0.117188, 0.652344, 0.878906, 1)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(0.207031, 0.726563, 0.949219, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8
shadow_color = Color(0.0976563, 0.535156, 0.71875, 1)
shadow_size = 3

[sub_resource type="LabelSettings" id="LabelSettings_xo12o"]
line_spacing = 0.0
font = ExtResource("1_yl7mk")
font_size = 32

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_lsivy"]
bg_color = Color(0.929688, 0.929688, 0.929688, 1)
border_width_left = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(0.996094, 0.996094, 0.996094, 1)
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8
shadow_color = Color(0.596078, 0.596078, 0.596078, 1)
shadow_size = 3
shadow_offset = Vector2(0, 3)

[sub_resource type="LabelSettings" id="LabelSettings_psigk"]
line_spacing = 0.0
font = ExtResource("2_nedba")
font_size = 32
font_color = Color(0.152941, 0.152941, 0.152941, 1)

[sub_resource type="Animation" id="Animation_tyd6r"]
resource_name = "ZoomIn"
length = 1.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Control:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.9, 1.6),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(1, 1)]
}
tracks/1/type = "audio"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Win")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"clips": [{
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource("10_k3ty0")
}],
"times": PackedFloat32Array(0)
}
tracks/1/use_blend = true

[sub_resource type="AnimationLibrary" id="AnimationLibrary_vk1nb"]
_data = {
"ZoomIn": SubResource("Animation_tyd6r")
}

[node name="WinScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_loboh")

[node name="Panel" type="Panel" parent="."]
modulate = Color(1, 1, 1, 0.603922)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_lock_ = true

[node name="Click" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("8_qhq6r")

[node name="Control" type="Control" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -640.0
offset_top = -360.0
offset_right = -600.0
offset_bottom = -320.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(640, 360)

[node name="BluePanel" type="Panel" parent="Control"]
layout_mode = 0
offset_left = 362.0
offset_top = 156.0
offset_right = 918.0
offset_bottom = 237.0
theme_override_styles/panel = SubResource("StyleBoxFlat_q8vha")

[node name="Label" type="Label" parent="Control/BluePanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -232.5
offset_top = -28.5
offset_right = 232.5
offset_bottom = 28.5
grow_horizontal = 2
grow_vertical = 2
text = "YOU WIN"
label_settings = SubResource("LabelSettings_xo12o")
horizontal_alignment = 1
vertical_alignment = 1

[node name="GreyPanel" type="Panel" parent="Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 341.0
offset_top = 203.0
offset_right = 899.0
offset_bottom = 539.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_lsivy")

[node name="Time" type="Label" parent="Control/GreyPanel"]
layout_mode = 0
offset_left = 41.0
offset_top = 43.0
offset_right = 217.0
offset_bottom = 83.0
text = "TIME : 0.0.0"
label_settings = SubResource("LabelSettings_psigk")
vertical_alignment = 1

[node name="Coins" type="Label" parent="Control/GreyPanel"]
layout_mode = 0
offset_left = 41.0
offset_top = 92.0
offset_right = 271.0
offset_bottom = 132.0
text = "COINS : 0"
label_settings = SubResource("LabelSettings_psigk")
vertical_alignment = 1

[node name="Kill" type="Label" parent="Control/GreyPanel"]
layout_mode = 0
offset_left = 43.0
offset_top = 135.0
offset_right = 273.0
offset_bottom = 175.0
text = "KILL : 0"
label_settings = SubResource("LabelSettings_psigk")
vertical_alignment = 1

[node name="Score" type="Label" parent="Control/GreyPanel"]
layout_mode = 0
offset_left = 42.0
offset_top = 177.0
offset_right = 272.0
offset_bottom = 217.0
text = "SCORE : 0"
label_settings = SubResource("LabelSettings_psigk")
vertical_alignment = 1

[node name="Continue" type="TextureButton" parent="Control"]
layout_mode = 0
offset_left = 739.0
offset_top = 486.0
offset_right = 929.0
offset_bottom = 535.0
scale = Vector2(0.841165, 0.92579)
texture_normal = ExtResource("3_bavyx")
texture_pressed = ExtResource("4_ar7sd")
texture_hover = ExtResource("5_xwr70")
texture_disabled = ExtResource("8_rw7s6")

[node name="Label" type="Label" parent="Control/Continue"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -58.0
offset_top = -13.0
offset_right = 58.0
offset_bottom = 13.0
grow_horizontal = 2
grow_vertical = 2
text = "Continue"
label_settings = ExtResource("6_6pp12")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Restart" type="TextureButton" parent="Control"]
layout_mode = 0
offset_left = 545.0
offset_top = 487.0
offset_right = 735.0
offset_bottom = 536.0
scale = Vector2(0.86449, 0.894893)
texture_normal = ExtResource("3_bavyx")
texture_pressed = ExtResource("4_ar7sd")
texture_hover = ExtResource("5_xwr70")

[node name="Label" type="Label" parent="Control/Restart"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -58.0
offset_top = -13.0
offset_right = 58.0
offset_bottom = 13.0
grow_horizontal = 2
grow_vertical = 2
text = "RESTART"
label_settings = ExtResource("6_6pp12")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Main Menu" type="TextureButton" parent="Control"]
layout_mode = 0
offset_left = 378.0
offset_top = 488.0
offset_right = 568.0
offset_bottom = 537.0
scale = Vector2(0.75077, 0.829091)
texture_normal = ExtResource("3_bavyx")
texture_pressed = ExtResource("4_ar7sd")
texture_hover = ExtResource("5_xwr70")
ignore_texture_size = true

[node name="Label" type="Label" parent="Control/Main Menu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -58.0
offset_top = -13.0
offset_right = 58.0
offset_bottom = 13.0
grow_horizontal = 2
grow_vertical = 2
text = "MAIN MENU"
label_settings = ExtResource("6_6pp12")
horizontal_alignment = 1
vertical_alignment = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_vk1nb")
}
autoplay = "ZoomIn"

[node name="Win" type="AudioStreamPlayer2D" parent="."]
volume_db = 6.0
pitch_scale = 2.0
max_distance = 2e+06

[connection signal="pressed" from="Control/Continue" to="." method="_on_continue_pressed"]
[connection signal="pressed" from="Control/Restart" to="." method="_on_restart_pressed"]
[connection signal="pressed" from="Control/Main Menu" to="." method="_on_main_menu_pressed"]
